# stack-hpc-coveralls

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  USAGE.txt  hie.yaml  release-bin.py  stack-7.10.yaml  stack-7.8.yaml  stack-hpc-coveralls.cabal  stack.ghc-8.0.yaml  stack.ghc-8.10.yaml  stack.ghc-8.2.yaml  stack.ghc-8.4.yaml  stack.ghc-8.6.yaml  stack.ghc-8.8.yaml  stack.ghc-9.0.yaml  stack.ghc-9.2.yaml  stack.yaml
.github/workflows/: haskell.yml
app/: Main.hs
src/: SHC.hs
src/SHC/: Api.hs  Coverage.hs  Coveralls.hs  Curl.hs  Lix.hs  Paths.hs  Stack.hs  Types.hs  Utils.hs
test/: SHCHUnits.hs  SHCSpec.hs
