cabal-version:       1.18
name:                stack-hpc-coveralls
version:             0.0.7.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/rubik/stack-hpc-coveralls
license:             ISC
license-file:        LICENSE
author:              Michele Lacchia
maintainer:          michelelacchia@gmail.com
copyright:           Copyright (c) 2015 Michele Lacchia,
                     Copyright (c) 2021-2023 Alexey Kuleshevich
category:            Control
build-type:          Simple
extra-source-files:
    stack.yaml
    USAGE.txt

library
  hs-source-dirs:      src
  exposed-modules:     SHC.Coverage
                       SHC.Types
                       SHC.Utils
                       SHC.Lix
                       SHC.Api
                       SHC.Stack
  build-depends:       base                 >=4.9  && <5
                     , hpc                  >=0.6
                     , directory            >=1.0
                     , filepath             >=1.3
                     , process              >=1.2
                     , pureMD5              >=2.1
                     , containers           >=0.5
                     , aeson                (>=0.8 && <2) || >=2.0.2.0
                     , bytestring           >=0.10
                     , utf8-string          >=1
                     , text                 >=1.2
                     , wreq                 >=0.5.3.2
                     , http-client          >=0.6
                     , lens                 >=4.7
                     , lens-aeson           >=1.0
                     , yaml                 >=0.8
  default-language:    Haskell2010

executable shc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base       >=4.7 && <5
                     , aeson      >=0.8
                     , bytestring >=0.10
                     , docopt     >=0.7
                     , stack-hpc-coveralls -any
  default-language:    Haskell2010

test-suite shc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SHCSpec
                       SHCHUnits
  build-depends:       base                >=4.7 && <5
                     , stack-hpc-coveralls -any
                     , hspec               >=2.1
                     , hspec-contrib       >=0.3
                     , HUnit               >=1.2
                     , hpc                 >=0.6
                     , containers          >=0.5
                     , deepseq             >=1.3
                     , aeson               >=0.8
                     , time                >=1.4
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rubik/stack-hpc-coveralls
